{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1122,
  "lineage": "64ce81e4-873d-7b40-3dc8-fce614517be9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f29c8402f8cce65c",
            "arn": "arn:aws:ec2:eu-west-1:113304117666:instance/i-03e394eaae7109ac0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e394eaae7109ac0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxbasics",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ecf6979f1ac1fdd0",
            "private_dns": "ip-10-0-4-179.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.179",
            "public_dns": "ec2-34-250-144-29.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.250.144.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-029d684418e247477",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08ea08ed1eca835ea"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0733e884c8eee22b9",
            "tags": {
              "Name": "jenkins_instance",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda"
            },
            "tags_all": {
              "Name": "jenkins_instance",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda",
              "hashicorp-learn": "aws-asg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ea08ed1eca835ea"
            ]
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public_eu_west_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "template_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f29c8402f8cce65c",
            "arn": "arn:aws:ec2:eu-west-1:113304117666:instance/i-01380c2c22cbd3d88",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01380c2c22cbd3d88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxbasics",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07e39c851f0b44847",
            "private_dns": "ip-10-0-4-124.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.124",
            "public_dns": "ec2-34-254-189-38.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.254.189.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0835382f4874ecc04",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bbcdf67baa711666"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0733e884c8eee22b9",
            "tags": {
              "Name": "template_ec2",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda"
            },
            "tags_all": {
              "Name": "template_ec2",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda",
              "hashicorp-learn": "aws-asg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbcdf67baa711666"
            ]
          },
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_security_group.instance_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.public_eu_west_1a",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:113304117666:internet-gateway/igw-0f22a646788dd90a6",
            "id": "igw-0f22a646788dd90a6",
            "owner_id": "113304117666",
            "tags": {
              "Name": "internet_gateway",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda"
            },
            "tags_all": {
              "Name": "internet_gateway",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda",
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-074f11f812b1da51b"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terramino",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:113304117666:loadbalancer/app/learn-asg-terramino-lb/3c606cd02a3c6790",
            "arn_suffix": "app/learn-asg-terramino-lb/3c606cd02a3c6790",
            "desync_mitigation_mode": "defensive",
            "dns_name": "learn-asg-terramino-lb-2123403124.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:113304117666:loadbalancer/app/learn-asg-terramino-lb/3c606cd02a3c6790",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "learn-asg-terramino-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08ea08ed1eca835ea"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0733e884c8eee22b9"
              },
              {
                "subnet_id": "subnet-0a9ba2f5a14d22a81"
              },
              {
                "subnet_id": "subnet-0f88f489a994cd6b9"
              }
            ],
            "subnets": [
              "subnet-0733e884c8eee22b9",
              "subnet-0a9ba2f5a14d22a81",
              "subnet-0f88f489a994cd6b9"
            ],
            "tags_all": {
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-074f11f812b1da51b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public_eu_west_1a",
            "aws_subnet.public_eu_west_1b",
            "aws_subnet.public_eu_west_1c",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terramino",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:113304117666:listener/app/learn-asg-terramino-lb/3c606cd02a3c6790/ba6342e186f37cc0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:113304117666:targetgroup/learn-asg-terramino/7b842e133b3166e8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:113304117666:listener/app/learn-asg-terramino-lb/3c606cd02a3c6790/ba6342e186f37cc0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:113304117666:loadbalancer/app/learn-asg-terramino-lb/3c606cd02a3c6790",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "hashicorp-learn": "aws-asg"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terramino",
            "aws_lb_target_group.terramino",
            "aws_security_group.lb_sg",
            "aws_subnet.public_eu_west_1a",
            "aws_subnet.public_eu_west_1b",
            "aws_subnet.public_eu_west_1c",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terramino",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:113304117666:targetgroup/learn-asg-terramino/7b842e133b3166e8",
            "arn_suffix": "targetgroup/learn-asg-terramino/7b842e133b3166e8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:113304117666:targetgroup/learn-asg-terramino/7b842e133b3166e8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "learn-asg-terramino",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "hashicorp-learn": "aws-asg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-074f11f812b1da51b"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "terramino",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:113304117666:targetgroup/learn-asg-terramino/7b842e133b3166e8-20230808153214509700000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:113304117666:targetgroup/learn-asg-terramino/7b842e133b3166e8",
            "target_id": "i-01380c2c22cbd3d88"
          },
          "dependencies": [
            "aws_instance.template_ec2",
            "aws_lb_target_group.terramino",
            "aws_security_group.db_sg",
            "aws_security_group.instance_sg",
            "aws_security_group.lb_sg",
            "aws_subnet.public_eu_west_1a",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f22a646788dd90a6",
            "id": "r-rtb-0313b1eab3cb5bc261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0313b1eab3cb5bc26",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:113304117666:route-table/rtb-09c38a2f398c62880",
            "id": "rtb-09c38a2f398c62880",
            "owner_id": "113304117666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f22a646788dd90a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda"
            },
            "tags_all": {
              "Name": "route_table",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda",
              "hashicorp-learn": "aws-asg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074f11f812b1da51b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_asso_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d8e06845e1d781c",
            "route_table_id": "rtb-09c38a2f398c62880",
            "subnet_id": "subnet-0733e884c8eee22b9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_eu_west_1a",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_asso_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00173888e9ade6e3b",
            "route_table_id": "rtb-09c38a2f398c62880",
            "subnet_id": "subnet-0a9ba2f5a14d22a81"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_eu_west_1b",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_asso_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085db9eec24931af0",
            "route_table_id": "rtb-09c38a2f398c62880",
            "subnet_id": "subnet-0f88f489a994cd6b9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_eu_west_1c",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:113304117666:security-group/sg-06f80386e38323ebe",
            "description": "Allow ssh http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f80386e38323ebe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Spring petclinic from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database sg",
            "name_prefix": "",
            "owner_id": "113304117666",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Db sg"
            },
            "tags_all": {
              "Name": "Db sg",
              "hashicorp-learn": "aws-asg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074f11f812b1da51b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:113304117666:security-group/sg-0bbcdf67baa711666",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-08ea08ed1eca835ea"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbcdf67baa711666",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ea08ed1eca835ea"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Connection  to the database",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06f80386e38323ebe"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "spring petclinic from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ea08ed1eca835ea"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "autoscaling-sg-20230808122823143100000001",
            "name_prefix": "autoscaling-sg-",
            "owner_id": "113304117666",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http",
              "hashicorp-learn": "aws-asg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074f11f812b1da51b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_security_group.lb_sg",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:113304117666:security-group/sg-08ea08ed1eca835ea",
            "description": "Allow ssh http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ea08ed1eca835ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Spring petclinic from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Lb sg",
            "name_prefix": "",
            "owner_id": "113304117666",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb sg"
            },
            "tags_all": {
              "Name": "lb sg",
              "hashicorp-learn": "aws-asg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074f11f812b1da51b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_eu_west_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:113304117666:subnet/subnet-0733e884c8eee22b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0733e884c8eee22b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "113304117666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda"
            },
            "tags_all": {
              "Name": "subnet",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda",
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-074f11f812b1da51b"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_eu_west_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:113304117666:subnet/subnet-0a9ba2f5a14d22a81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9ba2f5a14d22a81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "113304117666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda"
            },
            "tags_all": {
              "Name": "subnet",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda",
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-074f11f812b1da51b"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_eu_west_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:113304117666:subnet/subnet-0f88f489a994cd6b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f88f489a994cd6b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "113304117666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda"
            },
            "tags_all": {
              "Name": "subnet",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda",
              "hashicorp-learn": "aws-asg"
            },
            "vpc_id": "vpc-074f11f812b1da51b"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:113304117666:vpc/vpc-074f11f812b1da51b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08efb192235ceb8dc",
            "default_route_table_id": "rtb-0313b1eab3cb5bc26",
            "default_security_group_id": "sg-071838eb915626deb",
            "dhcp_options_id": "dopt-a91df0d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074f11f812b1da51b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0313b1eab3cb5bc26",
            "owner_id": "113304117666",
            "tags": {
              "Name": "vpc",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda"
            },
            "tags_all": {
              "Name": "vpc",
              "Owner": "jduchnowski",
              "Project": "2023_internship_gda",
              "hashicorp-learn": "aws-asg"
            }
          }
        }
      ]
    }
  ]
}